--- a/templates/libros.html
+++ b/templates/libros.html
@@ -1,7 +1,8 @@
 {% extends 'header.html' %}
 {% block body %}
 
-<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+    crossorigin="anonymous"></script>
 
 <div class="container-fluid">
     <div class="row">
@@ -51,7 +52,7 @@
                         <td>{{ libro.2 }}</td>
                         <td>{{ libro.3 }}</td>
                         <td>{{ libro.4 }}</td>
-                        <td><button type="button" data-id="{{ libro.0 }}" class="usersInfo btn btn-success"
+                        <td><button type="button" data-id="{{ libro.0 }}" class="usersInfoLibros btn btn-success"
                                 title="Detalles">Detalles</button></td>
                     </tr>
                     {% endfor%}
@@ -83,7 +84,8 @@
                             </tr>
                             <tr>
                                 <th>Cantidad</th>
-                                <th><input type="text" name="cantidad" id="cantidad" class="form-control" required="true">
+                                <th><input type="text" name="cantidad" id="cantidad" class="form-control"
+                                        required="true">
                                 </th>
                             </tr>
                             <tr>
@@ -93,8 +95,7 @@
                             </tr>
                             <tr>
                                 <th>Año</th>
-                                <th><input type="text" name="anio" id="anio" class="form-control"
-                                        required="true"></th>
+                                <th><input type="text" name="anio" id="anio" class="form-control" required="true"></th>
                             </tr>
 
                             <tr>
@@ -112,7 +113,7 @@
 
 
 
-    <div class="modal fade" id="viewField" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="viewFieldL" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -122,7 +123,7 @@
                 <div class="modal-cuerpo">
 
                 </div>
-                
+
                 <div class="modal-footer">
                 </div>
             </div>
@@ -138,8 +139,8 @@
         $("#success-alert").fadeTo(3000, 500).slideUp(500, function () {
             $("#success-alert").slideUp(500);
         });
-        $('.usersInfo').click(function () {
-            var idLibro = $(this).data('idLibro');
+        $('.usersInfoLibros').click(function () {
+            var idLibro = $(this).data('id'); // Utiliza el atributo 'data-id'
             $.ajax({
                 url: '/viewlibros',
                 type: 'POST',
@@ -147,10 +148,10 @@
                 success: function (data) {
                     $('.modal-cuerpo').html(data);
                     $('.modal-cuerpo').append(data.htmlresponse);
-                    $('#viewField').modal('show');
+                    $('#viewFieldL').modal('show');
                 }
             });
         });
-    }); 
+    });
 </script>
 {% endblock %}
