--- a/templates/viewestudiantes.html
+++ b/templates/viewestudiantes.html
@@ -27,7 +27,7 @@
         </tr>
 
         <tr>
-            <input type="hidden" name="estudiantesId" id="estudiantesId" value="{{ estudiante.0 }}">
+            <input type="hidden" name="id" id="id" value="{{ estudiante.0 }}">
             <th colspan="2">
                 <a href="/deleteestudiantes/{{estudiante.0}}" class="btn btn-outline btn-danger"
                     onclick="return confirm('Esta seguro de eliminar este registro?')">Eliminar</a>
