--- a/templates/header.html
+++ b/templates/header.html
@@ -21,7 +21,7 @@
                     <a class="nav-link" href="/libros">Libros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Prestamos</a>
+                    <a class="nav-link" href="/prestamos">Prestamos</a>
                 </li>
             </ul>
         </div>
@@ -29,5 +29,4 @@
     {% block body %}
     {% endblock %}
 </body>
-
 </html>
