--- a/templates/prestamos.html
+++ b/templates/prestamos.html
@@ -10,7 +10,7 @@
             <form role="form">
                 <p class="text-center">
                     <button type="button" data-bs-toggle="modal" data-bs-target="#NewField" class="btn btn-primary">
-                        Insertar nuevo prestamo
+                        Insertar un nuevo préstamo
                     </button>
                 </p>
             </form>
@@ -36,7 +36,7 @@
             <table class="table">
                 <thead>
                     <tr>
-                        <th>ID prestamo</th>
+                        <th>ID préstamo</th>
                         <th>ID estudiante</th>
                         <th>ID libro</th>
                         <th>Fecha prestamo</th>
@@ -75,7 +75,7 @@
                     <div class="modal-body">
                         <table class="table table-hover">
                             <tr>
-                                <th>ID prestamo</th>
+                                <th>ID préstamo</th>
                                 <th><input type="text" name="idprestamo" id="idprestamo" class="form-control" required="true">
                                 </th>
                             </tr>
@@ -91,7 +91,7 @@
                                 </th>
                             </tr>
                             <tr>
-                                <th>Fecha prestamo</th>
+                                <th>Fecha Préstamo</th>
                                 <th><input type="text" name="fechaprestamo" id="fechaprestamo" class="form-control" required="true">
                                 </th>
                             </tr>
