--- a/templates/viewestudiantes.html
+++ b/templates/viewestudiantes.html
@@ -30,7 +30,7 @@
             <input type="hidden" name="id" id="id" value="{{ estudiante.0 }}">
             <th colspan="2">
                 <a href="/deleteestudiantes/{{estudiante.0}}" class="btn btn-outline btn-danger"
-                    onclick="return confirm('Esta seguro de eliminar este registro?')">Eliminar</a>
+                    onclick="return confirm('¿Está seguro de eliminar este registro?')">Eliminar</a>
                 <button type="submit" class="btn btn-outline btn-success">Actualizar</button>
             </th>
         </tr>
