--- a/templates/viewprestamos.html
+++ b/templates/viewprestamos.html
@@ -2,7 +2,7 @@
 <form id="update_form_{{ prestamo.0 }}" method="POST" action="/updateprestamos">
     <table class="table table-hover">
         <tr>
-            <th>ID Prestamo</th>
+            <th>ID Préstamo</th>
             <th>{{ prestamo.0 }}</th>
         </tr>
         <tr>
@@ -14,7 +14,7 @@
             <th><input type="text" value="{{ prestamo.2 }}" name="idlibro" id="idlibro" class="form-control" required="true"></th>
         </tr>
         <tr>
-            <th>Fecha prestamo</th>
+            <th>Fecha préstamo</th>
             <th><input type="text" value="{{ prestamo.3 }}" name="fechaprestamo" id="fechaprestamo" class="form-control" required="true"></th>
         </tr>
         <tr>
