--- a/templates/header.html
+++ b/templates/header.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>CRUD Estudiantes</title>
+    <title>CRUD de biblioteca</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -21,7 +21,7 @@
                     <a class="nav-link" href="/libros">Libros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/prestamos">Prestamos</a>
+                    <a class="nav-link" href="/prestamos">Préstamos</a>
                 </li>
             </ul>
         </div>
