--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
             <form role="form">
                 <p class="text-center">
                     <button type="button" data-bs-toggle="modal" data-bs-target="#NewField" class="btn btn-primary">
-                        Insertar nuevo estudiante
+                        Insertar un nuevo estudiante
                     </button>
                 </p>
             </form>
