--- a/templates/libros.html
+++ b/templates/libros.html
@@ -10,7 +10,7 @@
             <form role="form">
                 <p class="text-center">
                     <button type="button" data-bs-toggle="modal" data-bs-target="#NewField" class="btn btn-primary">
-                        Insertar nuevo libro
+                        Insertar un nuevo libro
                     </button>
                 </p>
             </form>
@@ -97,7 +97,6 @@
                                 <th>Año</th>
                                 <th><input type="text" name="anio" id="anio" class="form-control" required="true"></th>
                             </tr>
-
                             <tr>
                                 <th colspan="2"><button type="submit" class="btn btn-primary">Registrar libro</button>
                                 </th>
@@ -121,9 +120,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-cuerpo">
-
                 </div>
-
                 <div class="modal-footer">
                 </div>
             </div>
